--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
-a {
+.App {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.App a {
   text-decoration: none;
+}
+
+.App footer {
+  text-align: center;
 }
