--- a/src/Weather.css
+++ b/src/Weather.css
@@ -16,13 +16,6 @@ body {
   font-weight: 400;
   line-height: 1;
 }
-.Weather .unit {
-  font-size: 22px;
-  font-weight: 400;
-  position: relative;
-  top: -4px;
-}
-
 .Weather h1 {
   color: #dadde1;
   font-size: 35px;
@@ -45,4 +38,13 @@ body {
   width: 64px;
   margin-right: 6px;
   display: inline-block;
+}
+
+.Weather .unit {
+  font-size: 16px;
+  font-weight: 400;
+  margin-left: 5px;
+  position: relative;
+  top: -32px;
+  opacity: 0.8;
 }
